--- a/templates/login.html
+++ b/templates/login.html
@@ -13,13 +13,13 @@ content %}
     />
   </div>
   <div class="form-group">
-    <label for="password1">Password</label>
+    <label for="password">Password</label>
     <input
       type="password"
       class="form-control"
-      id="password1"
-      name="password1"
-      placeholder="Enter your password"
+      id="password"
+      name="password"
+      placeholder="Enter password"
     />
   </div>
   <br />
