--- a/templates/user.html
+++ b/templates/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
 content %}
 <form method="GET">
-    <p><strong>This line rendered as bold text.</strong></p>
+    <p><strong>Below is your user information: </strong></p>
     <p>insert user information here</p>
 
 
